--- a/style.css
+++ b/style.css
@@ -1,23 +1,49 @@
+html{
+    height: 100%;
+}
 body{
-    background-color: burlywood;
-    font-size: 300%;
+     background-color: burlywood;
+     min-height: 100%;
 }
 button{
     background-color: #cdd0d7;
+    min-width: 35px; 
+    width:15%;
+  
+}
+#wapper{
+    min-width: 640px;
+    min-height: 360px;
+    width: 25%;
+    font-size: 200%;
+    display: inline-block;
+  position: relative;
+     top:0 ;
+  bottom: 0;
+  right: 0;
+  left: 0;
    
+ 
+}
+#wrapper:after {
+  padding-top: 56.25%;
+  display: block;
+  content: '';
 }
 #calc{
-    margin-top: 12%;
-     border-radius: 25px ;
+    position: absolute;
+    top: 50%;
+  bottom: 0;
+  right: 0;
+  left: 0;
+    border-radius: 25px ;
     min-width: 640px;
-    max-width: 640px;
+    min-height: 360px;
     background-color: #9498a1;
-    display: inline-block;
+     
 }
-button{
-    width:35px;
-    
-}
+
+
 
 
 
