--- a/style.css
+++ b/style.css
@@ -7,39 +7,32 @@ body{
 }
 button{
     background-color: #cdd0d7;
+    margin: 0.3%;
     min-width: 35px; 
     width:15%;
   
 }
 #wapper{
-    min-width: 640px;
+    min-width: 640px 
     min-height: 360px;
-    width: 25%;
     font-size: 200%;
-    display: inline-block;
+    width: 50%;
+    height: 50%;
   position: relative;
-     top:0 ;
-  bottom: 0;
-  right: 0;
-  left: 0;
-   
+     
  
-}
-#wrapper:after {
-  padding-top: 56.25%;
-  display: block;
-  content: '';
 }
 #calc{
     position: absolute;
-    top: 50%;
+    top: 0;
   bottom: 0;
   right: 0;
   left: 0;
     border-radius: 25px ;
-    min-width: 640px;
+    min-width: 640px ;
     min-height: 360px;
     background-color: #9498a1;
+    
      
 }
 
